--- a/Models/stackingEnsembleOptimized-collinearity.ipynb
+++ b/Models/stackingEnsembleOptimized-collinearity.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -84,7 +84,8 @@
    "source": [
     "#train for trees\n",
     "# train = o.train[col]\n",
-    "def NAOperation(train, d_mean):\n",
+    "def NAOperation(trainInput, d_mean):\n",
+    "    train=trainInput.copy()\n",
     "    n = train.isnull().sum(axis=1)\n",
     "    for c in train.columns:\n",
     "        train[c + '_nan_'] = pd.isnull(train[c])\n",
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -131,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -165,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -213,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -222,16 +223,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "reward LR=0.972964865045\n"
+      "reward LR=0.0168751926508\n"
      ]
     }
    ],
    "source": [
-    "colLR=['technical_30', 'technical_20', 'fundamental_11', 'technical_19']\n",
-    "tmpModel=LR_tech(d_mean=d_mean, colLR=colLR, low_y_cut=-0.075, high_y_cut=0.075, \\\n",
+    "colLR=['technical_20']#['technical_30', 'technical_20', 'fundamental_11', 'technical_19']\n",
+    "tmpModel=LR_tech(d_mean=d_mean, colLR=colLR, low_y_cut=-0.086093, high_y_cut=0.093497, \\\n",
     "                                                n_jobs=-1)\n",
     "tmpModel.fit(X_train, y_train) \n",
-    "predLR=pd.DataFrame()\n",
+    "predLR=pd.DataFrame(index=y_test.index)\n",
+    "predLR['id']=(O['id'])[O.timestamp > 905]\n",
     "predLR['y'] = tmpModel.predict(X_test)\n",
     "# predLR['y'] = predLR.apply(lambda r: 0.95 * r['y'] + 0.05 * ymean_dict[r['id']]\\\n",
     "#                           if r['id'] in ymean_dict else r['y'], axis = 1)\n",
@@ -241,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -250,23 +252,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LR coeff=[ 0.82685598]\n",
-      "reward LR=0.972971869725\n",
-      "2.0119998455\n"
+      "LR coeff=[ 0.89412554]\n",
+      "reward LR=0.0169290458821\n",
+      "1.62300014496\n"
      ]
     }
    ],
    "source": [
     "start=time()\n",
     "n_folds = 2\n",
-    "colLR=['technical_30', 'technical_20', 'fundamental_11', 'technical_19']\n",
+    "colLR=['technical_20']#['technical_30', 'technical_20', 'fundamental_11', 'technical_19']\n",
     "ensembleObjLR=Ensemble(n_folds=n_folds, stacker=LinearRegression(fit_intercept=False, n_jobs=-1), \\\n",
-    "                       base_models=[[LR_tech(d_mean=d_mean, colLR=colLR, low_y_cut=-0.075, high_y_cut=0.075, \\\n",
+    "                       base_models=[[LR_tech(d_mean=d_mean, colLR=colLR, low_y_cut=-0.075, high_y_cut=0.085, \\\n",
     "                                                n_jobs=-1) for i in range(n_folds)]])\n",
     "ensembleObjLR.fit(X=X_train, y=y_train) \n",
-    "predLR=pd.DataFrame()\n",
+    "predLR=pd.DataFrame(index=y_test.index)\n",
+    "predLR['id']=(O['id'])[O.timestamp >= 906]\n",
     "predLR['y'] = ensembleObjLR.predict(T=X_test)\n",
-    "# predLR['y'] = predLR.apply(lambda r: 0.95 * r['y'] + 0.05 * ymean_dict[r['id']]\\\n",
+    "# predLR['y'] = predLR.apply(lambda r: 0.975 * r['y'] + 0.025 * ymean_dict[r['id']]\\\n",
     "#                           if r['id'] in ymean_dict else r['y'], axis = 1)\n",
     "print(\"LR coeff={}\".format(ensembleObjLR.stacker.coef_))\n",
     "print(\"reward LR={}\".format(get_reward(y_test, predLR.y)))\n",
@@ -276,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -288,8 +291,8 @@
      "output_type": "stream",
      "text": [
       "RFR coeff=[ 1.08232776]\n",
-      "reward RFR=0.97297960427\n",
-      "71.7309999466\n"
+      "reward RFR=0.0198686035765\n",
+      "100.28399992\n"
      ]
     }
    ],
@@ -298,10 +301,11 @@
     "n_folds = 2\n",
     "ensembleObjRFR=Ensemble(n_folds=n_folds, stacker=LinearRegression(fit_intercept=False, n_jobs=-1),                      base_models=[[ExtraTreesRegressor(n_estimators=40, max_depth=4, n_jobs=-1,                                                         random_state=17, verbose=0) for i in range(n_folds)]])\n",
     "ensembleObjRFR.fit(X=NAOperation(X_train, d_mean), y=y_train) \n",
-    "predRFR=pd.DataFrame()\n",
+    "predRFR=pd.DataFrame(index=y_test.index)\n",
+    "predRFR['id']=(O['id'])[O.timestamp >= 906]\n",
     "predRFR['y'] = ensembleObjRFR.predict(T=NAOperation(X_test, d_mean))\n",
-    "#predRFR['y'] = predRFR.apply(lambda r: 0.95 * r['y'] + 0.05 * ymean_dict[r['id']]\\\n",
-    "#                             if r['id'] in ymean_dict else r['y'], axis = 1)\n",
+    "predRFR['y'] = predRFR.apply(lambda r: 0.95 * r['y'] + 0.05 * ymean_dict[r['id']]\\\n",
+    "                            if r['id'] in ymean_dict else r['y'], axis = 1)\n",
     "print(\"RFR coeff={}\".format(ensembleObjRFR.stacker.coef_))\n",
     "print(\"reward RFR={}\".format(get_reward(y_test, predRFR.y)))\n",
     "end = time()\n",
@@ -324,10 +328,11 @@
     "                        base_models=[[xgb.XGBRegressor(objective='reg:linear', colsample_bytree=.8, \\\n",
     "                        subsample=.9, min_child_weight=1000, base_score=.5) for i in range(n_folds)]])\n",
     "ensembleObjXGB.fit(X=X_train, y=y_train) \n",
-    "predXGB=pd.DataFrame()\n",
+    "predXGB=pd.DataFrame(index=y_test.index)\n",
+    "predXGB['id']=(O['id'])[O.timestamp >= 906]\n",
     "predXGB['y'] = ensembleObjXGB.predict(T=X_test)\n",
-    "#predXGB['y'] = predXGB.apply(lambda r: 0.95 * r['y'] + 0.05 * ymean_dict[r['id']] \\\n",
-    "#                             if r['id'] in ymean_dict else r['y'], axis = 1)\n",
+    "predXGB['y'] = predXGB.apply(lambda r: 0.95 * r['y'] + 0.05 * ymean_dict[r['id']] \\\n",
+    "                            if r['id'] in ymean_dict else r['y'], axis = 1)\n",
     "print(\"XGB coeff={}\".format(ensembleObjXGB.stacker.coef_))\n",
     "print(\"reward XGB={}\".format(get_reward(y_test, predXGB.y,)\n",
     "end = time()\n",
