--- a/Models/stackingEnsembleOptimized-collinearity.ipynb
+++ b/Models/stackingEnsembleOptimized-collinearity.ipynb
@@ -66,9 +66,9 @@
    },
    "outputs": [],
    "source": [
-    "X_train=(O[col])[O.timestamp <= 905].fillna(d_mean)\n",
+    "X_train=(O[col])[O.timestamp <= 905]#.fillna(d_mean)\n",
     "y_train=O.y[O.timestamp <= 905]\n",
-    "X_test=(O[col])[O.timestamp > 905].fillna(d_mean)\n",
+    "X_test=(O[col])[O.timestamp > 905]#.fillna(d_mean)\n",
     "y_test=O.y[O.timestamp > 905]"
    ]
   },
@@ -90,7 +90,7 @@
     "    for c in train.columns:\n",
     "        train[c + '_nan_'] = pd.isnull(train[c])\n",
     "        d_mean[c + '_nan_'] = 0\n",
-    "    #train = train.fillna(d_mean)\n",
+    "    train = train.fillna(d_mean)\n",
     "    train['znull'] = n\n",
     "    n = []\n",
     "    return train\n",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -112,7 +112,8 @@
    "outputs": [],
    "source": [
     "class RTR(object):\n",
-    "    def __init__(self, d_mean, n_estimators=40, max_depth=4, n_jobs=-1,                                                         random_state=17, verbose=0):\n",
+    "    def __init__(self, d_mean, n_estimators=40, max_depth=4, n_jobs=-1,\\\n",
+    "                 random_state=17, verbose=0):\n",
     "#         self.objective=objective\n",
     "#         self.colsample_bytree=colsample_bytree\n",
     "#         self.subsample=subsample\n",
@@ -127,7 +128,25 @@
     "        self.model.fit(NAOperation(X_train, self.d_mean), y_train)\n",
     "        \n",
     "    def predict(self, X_test):\n",
-    "        return self.model.predict(NAOperation(X_test, self.d_mean))"
+    "        return self.model.predict(NAOperation(X_test, self.d_mean))\n",
+    "    \n",
+    "class XGBoost(object):\n",
+    "    def __init__(self, d_mean, objective='reg:linear', colsample_bytree=.8, \\\n",
+    "                 subsample=.9, min_child_weight=1000, base_score=.5):\n",
+    "#         self.objective=objective\n",
+    "#         self.colsample_bytree=colsample_bytree\n",
+    "#         self.subsample=subsample\n",
+    "#         self.min_child_weight=min_child_weight\n",
+    "#         self.base_score=base_score\n",
+    "        self.d_mean=d_mean\n",
+    "        self.model=xgb.XGBRegressor(objective=objective, colsample_bytree=colsample_bytree, \\\n",
+    "                        subsample=subsample, min_child_weight=min_child_weight, base_score=base_score)\n",
+    "        \n",
+    "    def fit(self, X_train, y_train):\n",
+    "        self.model.fit(X_train.fillna(d_mean), y_train)\n",
+    "        \n",
+    "    def predict(self, X_test):\n",
+    "        return self.model.predict(X_test.fillna(d_mean))\n"
    ]
   },
   {
@@ -156,7 +175,7 @@
     "        y_is_above_cut = (y_train > self.high_y_cut)\n",
     "        y_is_below_cut = (y_train < self.low_y_cut)\n",
     "        y_is_within_cut = (~y_is_above_cut & ~y_is_below_cut)\n",
-    "        self.model.fit(np.array(X_train.loc[y_is_within_cut, self.colLR].values).\\\n",
+    "        self.model.fit(np.array(X_train.loc[y_is_within_cut, self.colLR].fillna(self.d_mean).values).\\\n",
     "                                      reshape(-1,len(self.colLR)), y_train.loc[y_is_within_cut])\n",
     "\n",
     "    def predict(self, X_test):\n",
@@ -325,7 +344,7 @@
     "start=time()\n",
     "n_folds = 2\n",
     "ensembleObjXGB=Ensemble(n_folds=n_folds, stacker=LinearRegression(fit_intercept=False, n_jobs=-1), \\\n",
-    "                        base_models=[[xgb.XGBRegressor(objective='reg:linear', colsample_bytree=.8, \\\n",
+    "                        base_models=[[XGBoost(d_mean=d_mean, objective='reg:linear', colsample_bytree=.8, \\\n",
     "                        subsample=.9, min_child_weight=1000, base_score=.5) for i in range(n_folds)]])\n",
     "ensembleObjXGB.fit(X=X_train, y=y_train) \n",
     "predXGB=pd.DataFrame(index=y_test.index)\n",
