--- a/Models/stackingEnsemble_2fold_collinearity.ipynb
+++ b/Models/stackingEnsemble_2fold_collinearity.ipynb
@@ -2,27 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jiguo\\AppData\\Local\\Enthought\\Canopy\\User\\lib\\site-packages\\sklearn\\cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
-      "C:\\Users\\jiguo\\AppData\\Local\\Enthought\\Canopy\\User\\lib\\site-packages\\sklearn\\grid_search.py:43: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. This module will be removed in 0.20.\n",
-      "  DeprecationWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.grid_search import GridSearchCV\n",
-    "#import xgboost as xgb\n",
+    "import xgboost as xgb\n",
     "import kagglegym\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -37,19 +26,18 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
-    "editable": true,
-    "scrolled": true
+    "editable": true
    },
    "outputs": [],
    "source": [
     "env = kagglegym.make()\n",
     "o = env.reset()\n",
+    "\n",
     "#o.train = o.train[:1000]\n",
     "excl = [env.ID_COL_NAME, env.SAMPLE_COL_NAME, env.TARGET_COL_NAME, env.TIME_COL_NAME]\n",
     "col = [c for c in o.train.columns if c not in excl]\n",
-    "\n",
     "#train = pd.read_hdf(r'C:\\Users\\jiguo\\Desktop\\KProject\\input\\train.h5')\n",
     "O = pd.read_hdf('../input/train.h5')\n",
     "d_mean= O[col].median(axis=0)\n",
@@ -58,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -74,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -103,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -112,7 +100,7 @@
    "outputs": [],
    "source": [
     "class RTR(object):\n",
-    "    def __init__(self, d_mean, n_estimators=40, max_depth=4, n_jobs=-1,\\\n",
+    "    def __init__(self, d_mean, n_estimators=40, max_depth=4, n_jobs=-1, max_features='auto',\\\n",
     "                 random_state=17, verbose=0):\n",
     "#         self.objective=objective\n",
     "#         self.colsample_bytree=colsample_bytree\n",
@@ -120,8 +108,8 @@
     "#         self.min_child_weight=min_child_weight\n",
     "#         self.base_score=base_score\n",
     "        self.d_mean=d_mean\n",
-    "        self.model=ExtraTreesRegressor(n_estimators=n_estimators, max_depth=max_depth,\\\n",
-    "                                   n_jobs=n_jobs, random_state=random_state, \\\n",
+    "        self.model=ExtraTreesRegressor(n_estimators=n_estimators, max_features='auto', \\\n",
+    "                                       max_depth=max_depth, n_jobs=n_jobs, random_state=random_state, \\\n",
     "                                   verbose=verbose)\n",
     "        \n",
     "    def fit(self, X_train, y_train):\n",
@@ -151,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -185,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -205,7 +193,7 @@
     "    def fit(self, X, y):\n",
     "        #X = np.array(X)\n",
     "        #y = np.array(y)\n",
-    "        self.folds = list(KFold(len(y), n_folds=self.n_folds, shuffle=True, random_state=17))\n",
+    "        self.folds = list(KFold(len(y), n_folds=self.n_folds, shuffle=False, random_state=17))\n",
     "        self.S_train = np.zeros((X.shape[0], len(self.base_models)))\n",
     "        for i, clf in enumerate(self.base_models):\n",
     "            for j, (train_idx, test_idx) in enumerate(self.folds):\n",
@@ -233,72 +221,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": false
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "reward LR=0.0168751926508\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "colLR=['technical_20']#['technical_30', 'technical_20', 'fundamental_11', 'technical_19']\n",
-    "tmpModel=LR_tech(d_mean=d_mean, colLR=colLR, low_y_cut=-0.086093, high_y_cut=0.093497, \\\n",
-    "                                                n_jobs=-1)\n",
-    "tmpModel.fit(X_train, y_train) \n",
-    "predLR=pd.DataFrame(index=y_test.index)\n",
-    "predLR['id']=(O['id'])[O.timestamp > 905]\n",
-    "predLR['y'] = tmpModel.predict(X_test)\n",
-    "# predLR['y'] = predLR.apply(lambda r: 0.95 * r['y'] + 0.05 * ymean_dict[r['id']]\\\n",
-    "#                           if r['id'] in ymean_dict else r['y'], axis = 1)\n",
-    "#print(\"LR coeff={}\".format(ensembleObjLR.stacker.coef_))\n",
-    "print(\"reward LR={}\".format(get_reward(y_test, predLR.y)))"
+    "class Ensemble_2Fold(object):\n",
+    "    def __init__(self, stacker, base_models, train_timestamp):\n",
+    "        #self.n_folds = n_folds\n",
+    "        self.stacker = stacker\n",
+    "        self.base_models = base_models\n",
+    "        self.train_timestamp=train_timestamp\n",
+    "        self.S_train=[]\n",
+    "        self.S_test=[]\n",
+    "        self_folds=[]\n",
+    "        \n",
+    "    def fit(self, X, y):\n",
+    "        #X = np.array(X)\n",
+    "        #y = np.array(y)\n",
+    "        n=self.train_timestamp.iloc[-1]/2\n",
+    "        self.folds = [[self.train_timestamp<=n, self.train_timestamp>n],\\\n",
+    "                      [self.train_timestamp>n, self.train_timestamp<=n]]\n",
+    "        self.S_train = np.zeros((X.shape[0], len(self.base_models)))\n",
+    "        for i, clf in enumerate(self.base_models):\n",
+    "            for j, (train_idx, test_idx) in enumerate(self.folds):\n",
+    "                X_train = X[train_idx]\n",
+    "                y_train = y[train_idx]\n",
+    "                X_holdout = X[test_idx]\n",
+    "                # y_holdout = y[test_idx]\n",
+    "                clf[j].fit(X_train, y_train)\n",
+    "                y_pred = clf[j].predict(X_holdout)[:]\n",
+    "                self.S_train[test_idx, i] = y_pred\n",
+    "        self.stacker.fit(self.S_train, y)\n",
+    "        \n",
+    "#     def predict(self, T):       \n",
+    "#         #T = np.array(T)       \n",
+    "#         self.S_test = np.zeros((T.shape[0], len(self.base_models)))\n",
+    "#         for i, clf in enumerate(self.base_models):\n",
+    "#             S_test_i = np.zeros((T.shape[0], len(self.folds)))\n",
+    "#             for j in range(len(self.folds)):\n",
+    "#                 S_test_i[:, j] = clf[j].predict(T)[:]\n",
+    "#             self.S_test[:, i] = S_test_i.mean(1)\n",
+    "# #             self.S_test[:,i]=[sum(map(lambda x: (x.predict(T))[0],clf))/self.n_folds]\n",
+    "#         y_pred = self.stacker.predict(self.S_test)[:]\n",
+    "#         return y_pred\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LR coeff=[ 0.89412554]\n",
-      "reward LR=0.0169290458821\n",
-      "1.62300014496\n"
-     ]
-    }
-   ],
-   "source": [
-    "start=time()\n",
-    "n_folds = 2\n",
-    "colLR=['technical_20']#['technical_30', 'technical_20', 'fundamental_11', 'technical_19']\n",
-    "ensembleObjLR=Ensemble(n_folds=n_folds, stacker=LinearRegression(fit_intercept=False, n_jobs=-1), \\\n",
-    "                       base_models=[[LR_tech(d_mean=d_mean, colLR=colLR, low_y_cut=-0.075, high_y_cut=0.085, \\\n",
-    "                                                n_jobs=-1) for i in range(n_folds)]])\n",
-    "ensembleObjLR.fit(X=X_train, y=y_train) \n",
-    "predLR=pd.DataFrame(index=y_test.index)\n",
-    "predLR['id']=(O['id'])[O.timestamp >= 906]\n",
-    "predLR['y'] = ensembleObjLR.predict(T=X_test)\n",
-    "# predLR['y'] = predLR.apply(lambda r: 0.975 * r['y'] + 0.025 * ymean_dict[r['id']]\\\n",
-    "#                           if r['id'] in ymean_dict else r['y'], axis = 1)\n",
-    "print(\"LR coeff={}\".format(ensembleObjLR.stacker.coef_))\n",
-    "print(\"reward LR={}\".format(get_reward(y_test, predLR.y)))\n",
-    "end = time()\n",
-    "print(end - start)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -309,9 +283,80 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RFR coeff=[ 1.08232776]\n",
-      "reward RFR=0.0198686035765\n",
-      "100.28399992\n"
+      "LR coeff=[ 0.81311641]\n",
+      "reward LR=0.0168753337685\n"
+     ]
+    }
+   ],
+   "source": [
+    "# colLR=['technical_20']#['technical_30', 'technical_20', 'fundamental_11', 'technical_19']\n",
+    "# tmpModel=LR_tech(d_mean=d_mean, colLR=colLR, low_y_cut=-0.086093, high_y_cut=0.093497, \\\n",
+    "#                                                 n_jobs=-1)\n",
+    "# tmpModel.fit(X_train, y_train) \n",
+    "# predLR=pd.DataFrame(index=y_test.index)\n",
+    "# predLR['id']=(O['id'])[O.timestamp > 905]\n",
+    "# predLR['y'] = tmpModel.predict(X_test)\n",
+    "# # predLR['y'] = predLR.apply(lambda r: 0.95 * r['y'] + 0.05 * ymean_dict[r['id']]\\\n",
+    "# #                           if r['id'] in ymean_dict else r['y'], axis = 1)\n",
+    "# print(\"LR coeff={}\".format(ensembleObjLR.stacker.coef_))\n",
+    "# print(\"reward LR={}\".format(get_reward(y_test, predLR.y)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LR coeff=[ 0.81311641]\n",
+      "reward LR=0.0166785923221\n",
+      "54.1208000183\n"
+     ]
+    }
+   ],
+   "source": [
+    "start=time()\n",
+    "n_folds = 2\n",
+    "colLR=['technical_20']#['technical_30', 'technical_20', 'fundamental_11', 'technical_19']\n",
+    "ensembleObjLR=Ensemble(n_folds=n_folds, stacker=LinearRegression(fit_intercept=False, n_jobs=-1), \\\n",
+    "                       base_models=[[LR_tech(d_mean=d_mean, colLR=colLR, low_y_cut=-0.075, high_y_cut=0.085, \\\n",
+    "                                                n_jobs=-1) for i in range(n_folds)]])\n",
+    "\n",
+    "ensembleObjLR.fit(X=X_train, y=y_train) \n",
+    "predLR=pd.DataFrame(index=y_test.index)\n",
+    "predLR['id']=(O['id'])[O.timestamp >= 906]\n",
+    "predLR['y'] = ensembleObjLR.predict(T=X_test)\n",
+    "predLR['y'] = predLR.apply(lambda r: 0.975 * r['y'] + 0.025 * ymean_dict[r['id']]\\\n",
+    "                          if r['id'] in ymean_dict else r['y'], axis = 1)\n",
+    "print(\"LR coeff={}\".format(ensembleObjLR.stacker.coef_))\n",
+    "print(\"reward LR={}\".format(get_reward(y_test, predLR.y)))\n",
+    "end = time()\n",
+    "print(end - start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RFR coeff=[ 0.3876608]\n",
+      "reward RFR=0.0154687016648\n",
+      "436.695688009\n"
      ]
     }
    ],
@@ -323,7 +368,7 @@
     "predRFR=pd.DataFrame(index=y_test.index)\n",
     "predRFR['id']=(O['id'])[O.timestamp >= 906]\n",
     "predRFR['y'] = ensembleObjRFR.predict(T=NAOperation(X_test, d_mean))\n",
-    "predRFR['y'] = predRFR.apply(lambda r: 0.95 * r['y'] + 0.05 * ymean_dict[r['id']]\\\n",
+    "predRFR['y'] = predRFR.apply(lambda r: 0.975 * r['y'] + 0.025 * ymean_dict[r['id']]\\\n",
     "                            if r['id'] in ymean_dict else r['y'], axis = 1)\n",
     "print(\"RFR coeff={}\".format(ensembleObjRFR.stacker.coef_))\n",
     "print(\"reward RFR={}\".format(get_reward(y_test, predRFR.y)))\n",
@@ -333,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -344,9 +389,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XGB coeff=[ 1.02905775]\n",
-      "reward XGB=-5.51441803404\n",
-      "948.137662888\n"
+      "XGB coeff=[ 0.50616729]\n",
+      "reward XGB=0.0255171336094\n",
+      "611.860242128\n"
      ]
     }
    ],
@@ -360,17 +405,17 @@
     "predXGB=pd.DataFrame(index=y_test.index)\n",
     "predXGB['id']=(O['id'])[O.timestamp >= 906]\n",
     "predXGB['y'] = ensembleObjXGB.predict(T=X_test)\n",
-    "predXGB['y'] = predXGB.apply(lambda r: 0.95 * r['y'] + 0.05 * ymean_dict[r['id']] \\\n",
+    "predXGB['y'] = predXGB.apply(lambda r: 0.975 * r['y'] + 0.025 * ymean_dict[r['id']] \\\n",
     "                            if r['id'] in ymean_dict else r['y'], axis = 1)\n",
     "print(\"XGB coeff={}\".format(ensembleObjXGB.stacker.coef_))\n",
-    "print(\"reward XGB={}\".format(get_reward(y_test, predXGB.y,)\n",
+    "print(\"reward XGB={}\".format(get_reward(y_test, predXGB.y)))\n",
     "end = time()\n",
     "print(end - start)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -378,19 +423,55 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-a4cded6bd6f1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcorrcoef\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpredLR\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpredRFR\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpredXGB\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[ 1.        ,  0.27062125,  0.48977207],\n",
+       "       [ 0.27062125,  1.        ,  0.52158758],\n",
+       "       [ 0.48977207,  0.52158758,  1.        ]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "np.corrcoef([predLR.y, predRFR.y, predXGB.y])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2727.19024491\n",
+      "[ 0.55150166  0.3663476   0.30871477]\n"
+     ]
+    }
+   ],
+   "source": [
+    "start=time()\n",
+    "colLR=['technical_20']\n",
+    "n_folds = 2\n",
+    "ensembleObj=Ensemble_2Fold(train_timestamp=O.timestamp, stacker=LinearRegression(fit_intercept=False, n_jobs=-1), \\\n",
+    "base_models=[[RTR(d_mean=d_mean, n_estimators=50, max_features='auto',\\\n",
+    "max_depth=4, n_jobs=-1, random_state=17, verbose=0) for i in range(n_folds)], \\\n",
+    "[LR_tech(d_mean=d_mean, colLR=colLR, low_y_cut=-0.075, high_y_cut=0.085, n_jobs=-1) for i in range(n_folds)], \\\n",
+    "[XGBoost(d_mean=d_mean, objective='reg:linear', colsample_bytree=.8, subsample=.8, min_child_weight=1000,\\\n",
+    "base_score=.5) for i in range(n_folds)]])\n",
+    "ensembleObj.fit(X=O[col], y=O.y) \n",
+    "end = time()\n",
+    "print(end - start)\n",
+    "\n",
+    "print(ensembleObj.stacker.coef_)"
    ]
   },
   {
@@ -458,18 +539,6 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
   }
  },
  "nbformat": 4,
