--- a/Models/stackingEnsemble_2fold_collinearity.ipynb
+++ b/Models/stackingEnsemble_2fold_collinearity.ipynb
@@ -2,22 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 17,
-=======
-   "execution_count": 2,
->>>>>>> 1459e333d7e01405f6fde679f78fedeb847bb9b2
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-<<<<<<< HEAD
-   "outputs": [],
-   "source": [
-    "from sklearn.grid_search import GridSearchCV\n",
-    "import xgboost as xgb\n",
-=======
    "outputs": [
     {
      "name": "stderr",
@@ -33,7 +23,6 @@
    "source": [
     "from sklearn.grid_search import GridSearchCV\n",
     "#import xgboost as xgb\n",
->>>>>>> 1459e333d7e01405f6fde679f78fedeb847bb9b2
     "import kagglegym\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -46,11 +35,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 2,
-=======
-   "execution_count": 17,
->>>>>>> 1459e333d7e01405f6fde679f78fedeb847bb9b2
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -72,11 +57,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 3,
-=======
-   "execution_count": 4,
->>>>>>> 1459e333d7e01405f6fde679f78fedeb847bb9b2
+   "execution_count": 5,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -92,11 +73,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 4,
-=======
-   "execution_count": 5,
->>>>>>> 1459e333d7e01405f6fde679f78fedeb847bb9b2
+   "execution_count": 6,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -125,11 +102,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 21,
-=======
-   "execution_count": 6,
->>>>>>> 1459e333d7e01405f6fde679f78fedeb847bb9b2
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -138,26 +111,17 @@
    "outputs": [],
    "source": [
     "class RTR(object):\n",
-<<<<<<< HEAD
-    "    def __init__(self, d_mean, n_estimators=40, max_depth=4, n_jobs=-1, max_features='auto',\\\n",
-=======
     "    def __init__(self, d_mean, n_estimators=40, max_depth=4, n_jobs=-1,\\\n",
->>>>>>> 1459e333d7e01405f6fde679f78fedeb847bb9b2
-    "                 random_state=17, verbose=0):\n",
+    "                 max_features='auto', random_state=17, verbose=0):\n",
     "#         self.objective=objective\n",
     "#         self.colsample_bytree=colsample_bytree\n",
     "#         self.subsample=subsample\n",
     "#         self.min_child_weight=min_child_weight\n",
     "#         self.base_score=base_score\n",
     "        self.d_mean=d_mean\n",
-<<<<<<< HEAD
-    "        self.model=ExtraTreesRegressor(n_estimators=n_estimators, max_features='auto', \\\n",
-    "                                       max_depth=max_depth, n_jobs=n_jobs, random_state=random_state, \\\n",
-=======
     "        self.model=ExtraTreesRegressor(n_estimators=n_estimators, max_depth=max_depth,\\\n",
     "                                   n_jobs=n_jobs, random_state=random_state, \\\n",
->>>>>>> 1459e333d7e01405f6fde679f78fedeb847bb9b2
-    "                                   verbose=verbose)\n",
+    "                                   max_features=max_features, verbose=verbose)\n",
     "        \n",
     "    def fit(self, X_train, y_train):\n",
     "        self.model.fit(NAOperation(X_train, self.d_mean), y_train)\n",
@@ -186,11 +150,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 6,
-=======
-   "execution_count": 7,
->>>>>>> 1459e333d7e01405f6fde679f78fedeb847bb9b2
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -224,17 +184,9 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-=======
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
->>>>>>> 1459e333d7e01405f6fde679f78fedeb847bb9b2
    },
    "outputs": [],
    "source": [
@@ -278,11 +230,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 23,
-=======
-   "execution_count": 31,
->>>>>>> 1459e333d7e01405f6fde679f78fedeb847bb9b2
+   "execution_count": 10,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -309,13 +257,8 @@
     "        self.S_train = np.zeros((X.shape[0], len(self.base_models)))\n",
     "        for i, clf in enumerate(self.base_models):\n",
     "            for j, (train_idx, test_idx) in enumerate(self.folds):\n",
-<<<<<<< HEAD
-    "                X_train = X[train_idx]\n",
-    "                y_train = y[train_idx]\n",
-=======
     "                X_train = X.loc[train_idx,:]\n",
     "                y_train = y.loc[train_idx,:]\n",
->>>>>>> 1459e333d7e01405f6fde679f78fedeb847bb9b2
     "                X_holdout = X[test_idx]\n",
     "                # y_holdout = y[test_idx]\n",
     "                clf[j].fit(X_train, y_train)\n",
@@ -338,46 +281,20 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-=======
    "execution_count": 40,
    "metadata": {
     "collapsed": false
->>>>>>> 1459e333d7e01405f6fde679f78fedeb847bb9b2
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
-      "LR coeff=[ 0.81311641]\n",
-      "reward LR=0.0168753337685\n"
-=======
       "reward LR=0.0168751926508\n"
->>>>>>> 1459e333d7e01405f6fde679f78fedeb847bb9b2
      ]
     }
    ],
    "source": [
-<<<<<<< HEAD
-    "# colLR=['technical_20']#['technical_30', 'technical_20', 'fundamental_11', 'technical_19']\n",
-    "# tmpModel=LR_tech(d_mean=d_mean, colLR=colLR, low_y_cut=-0.086093, high_y_cut=0.093497, \\\n",
-    "#                                                 n_jobs=-1)\n",
-    "# tmpModel.fit(X_train, y_train) \n",
-    "# predLR=pd.DataFrame(index=y_test.index)\n",
-    "# predLR['id']=(O['id'])[O.timestamp > 905]\n",
-    "# predLR['y'] = tmpModel.predict(X_test)\n",
-    "# # predLR['y'] = predLR.apply(lambda r: 0.95 * r['y'] + 0.05 * ymean_dict[r['id']]\\\n",
-    "# #                           if r['id'] in ymean_dict else r['y'], axis = 1)\n",
-    "# print(\"LR coeff={}\".format(ensembleObjLR.stacker.coef_))\n",
-    "# print(\"reward LR={}\".format(get_reward(y_test, predLR.y)))"
-=======
     "colLR=['technical_20']#['technical_30', 'technical_20', 'fundamental_11', 'technical_19']\n",
     "tmpModel=LR_tech(d_mean=d_mean, colLR=colLR, low_y_cut=-0.086093, high_y_cut=0.093497, \\\n",
     "                                                n_jobs=-1)\n",
@@ -389,37 +306,22 @@
     "#                           if r['id'] in ymean_dict else r['y'], axis = 1)\n",
     "#print(\"LR coeff={}\".format(ensembleObjLR.stacker.coef_))\n",
     "print(\"reward LR={}\".format(get_reward(y_test, predLR.y)))"
->>>>>>> 1459e333d7e01405f6fde679f78fedeb847bb9b2
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-=======
    "execution_count": 28,
    "metadata": {
     "collapsed": false
->>>>>>> 1459e333d7e01405f6fde679f78fedeb847bb9b2
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
-      "LR coeff=[ 0.81311641]\n",
-      "reward LR=0.0166785923221\n",
-      "54.1208000183\n"
-=======
       "LR coeff=[ 0.8131272]\n",
       "reward LR=0.0167618571278\n",
       "1.3259999752\n"
->>>>>>> 1459e333d7e01405f6fde679f78fedeb847bb9b2
      ]
     }
    ],
@@ -435,13 +337,8 @@
     "predLR=pd.DataFrame(index=y_test.index)\n",
     "predLR['id']=(O['id'])[O.timestamp >= 906]\n",
     "predLR['y'] = ensembleObjLR.predict(T=X_test)\n",
-<<<<<<< HEAD
-    "predLR['y'] = predLR.apply(lambda r: 0.975 * r['y'] + 0.025 * ymean_dict[r['id']]\\\n",
-    "                          if r['id'] in ymean_dict else r['y'], axis = 1)\n",
-=======
     "# predLR['y'] = predLR.apply(lambda r: 0.975 * r['y'] + 0.025 * ymean_dict[r['id']]\\\n",
     "#                           if r['id'] in ymean_dict else r['y'], axis = 1)\n",
->>>>>>> 1459e333d7e01405f6fde679f78fedeb847bb9b2
     "print(\"LR coeff={}\".format(ensembleObjLR.stacker.coef_))\n",
     "print(\"reward LR={}\".format(get_reward(y_test, predLR.y)))\n",
     "end = time()\n",
@@ -450,11 +347,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 13,
-=======
    "execution_count": 44,
->>>>>>> 1459e333d7e01405f6fde679f78fedeb847bb9b2
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -465,31 +358,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
-      "RFR coeff=[ 0.3876608]\n",
-      "reward RFR=0.0154687016648\n",
-      "436.695688009\n"
-=======
       "RFR coeff=[ 1.08232776]\n",
       "reward RFR=0.0198686035765\n",
       "100.28399992\n"
->>>>>>> 1459e333d7e01405f6fde679f78fedeb847bb9b2
      ]
     }
    ],
    "source": [
     "start=time()\n",
     "n_folds = 2\n",
-    "ensembleObjRFR=Ensemble(n_folds=n_folds, stacker=LinearRegression(fit_intercept=False, n_jobs=-1),                      base_models=[[ExtraTreesRegressor(n_estimators=40, max_depth=4, n_jobs=-1,                                                         random_state=17, verbose=0) for i in range(n_folds)]])\n",
+    "ensembleObjRFR=Ensemble(n_folds=n_folds, stacker=LinearRegression(fit_intercept=False, n_jobs=-1), \\\n",
+    "                        base_models=[[ExtraTreesRegressor(n_estimators=40, max_depth=4, n_jobs=-1, \\\n",
+    "                                                          random_state=17, verbose=0) for i in range(n_folds)]])\n",
     "ensembleObjRFR.fit(X=NAOperation(X_train, d_mean), y=y_train) \n",
     "predRFR=pd.DataFrame(index=y_test.index)\n",
     "predRFR['id']=(O['id'])[O.timestamp >= 906]\n",
     "predRFR['y'] = ensembleObjRFR.predict(T=NAOperation(X_test, d_mean))\n",
-<<<<<<< HEAD
-    "predRFR['y'] = predRFR.apply(lambda r: 0.975 * r['y'] + 0.025 * ymean_dict[r['id']]\\\n",
-=======
     "predRFR['y'] = predRFR.apply(lambda r: 0.95 * r['y'] + 0.05 * ymean_dict[r['id']]\\\n",
->>>>>>> 1459e333d7e01405f6fde679f78fedeb847bb9b2
     "                            if r['id'] in ymean_dict else r['y'], axis = 1)\n",
     "print(\"RFR coeff={}\".format(ensembleObjRFR.stacker.coef_))\n",
     "print(\"reward RFR={}\".format(get_reward(y_test, predRFR.y)))\n",
@@ -499,31 +384,13 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 18,
-=======
    "execution_count": null,
->>>>>>> 1459e333d7e01405f6fde679f78fedeb847bb9b2
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-<<<<<<< HEAD
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "XGB coeff=[ 0.50616729]\n",
-      "reward XGB=0.0255171336094\n",
-      "611.860242128\n"
-     ]
-    }
-   ],
-=======
    "outputs": [],
->>>>>>> 1459e333d7e01405f6fde679f78fedeb847bb9b2
    "source": [
     "start=time()\n",
     "n_folds = 2\n",
@@ -534,45 +401,16 @@
     "predXGB=pd.DataFrame(index=y_test.index)\n",
     "predXGB['id']=(O['id'])[O.timestamp >= 906]\n",
     "predXGB['y'] = ensembleObjXGB.predict(T=X_test)\n",
-<<<<<<< HEAD
-    "predXGB['y'] = predXGB.apply(lambda r: 0.975 * r['y'] + 0.025 * ymean_dict[r['id']] \\\n",
-    "                            if r['id'] in ymean_dict else r['y'], axis = 1)\n",
-    "print(\"XGB coeff={}\".format(ensembleObjXGB.stacker.coef_))\n",
-    "print(\"reward XGB={}\".format(get_reward(y_test, predXGB.y)))\n",
-=======
     "predXGB['y'] = predXGB.apply(lambda r: 0.95 * r['y'] + 0.05 * ymean_dict[r['id']] \\\n",
     "                            if r['id'] in ymean_dict else r['y'], axis = 1)\n",
     "print(\"XGB coeff={}\".format(ensembleObjXGB.stacker.coef_))\n",
     "print(\"reward XGB={}\".format(get_reward(y_test, predXGB.y,)\n",
->>>>>>> 1459e333d7e01405f6fde679f78fedeb847bb9b2
     "end = time()\n",
     "print(end - start)"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.        ,  0.27062125,  0.48977207],\n",
-       "       [ 0.27062125,  1.        ,  0.52158758],\n",
-       "       [ 0.48977207,  0.52158758,  1.        ]])"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-=======
    "execution_count": null,
    "metadata": {
     "collapsed": true,
@@ -580,33 +418,12 @@
     "editable": true
    },
    "outputs": [],
->>>>>>> 1459e333d7e01405f6fde679f78fedeb847bb9b2
    "source": [
     "np.corrcoef([predLR.y, predRFR.y, predXGB.y])"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2727.19024491\n",
-      "[ 0.55150166  0.3663476   0.30871477]\n"
-     ]
-    }
-   ],
-   "source": [
-    "start=time()\n",
-=======
    "execution_count": 29,
    "metadata": {
     "collapsed": false
@@ -624,7 +441,6 @@
     }
    ],
    "source": [
->>>>>>> 1459e333d7e01405f6fde679f78fedeb847bb9b2
     "colLR=['technical_20']\n",
     "n_folds = 2\n",
     "ensembleObj=Ensemble_2Fold(train_timestamp=O.timestamp, stacker=LinearRegression(fit_intercept=False, n_jobs=-1), \\\n",
@@ -705,8 +521,6 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
-<<<<<<< HEAD
-=======
   },
   "language_info": {
    "codemirror_mode": {
@@ -718,8 +532,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
->>>>>>> 1459e333d7e01405f6fde679f78fedeb847bb9b2
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
