--- a/Models/PA2_corrected2.ipynb
+++ b/Models/PA2_corrected2.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -20,7 +22,21 @@
       "('fitting linear model on ', 'technical_30')\n",
       "('fitting linear model on ', 'technical_13')\n",
       "('fitting linear model on ', 'technical_34')\n",
-      "adding new features\n",
+      "adding new features\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/scipy/linalg/basic.py:884: RuntimeWarning: internal gelsd driver lwork query error, required iwork dimension not returned. This is likely the result of LAPACK bug 0038, fixed in LAPACK 3.2.2 (released July 21, 2010). Falling back to 'gelss' driver.\n",
+      "  warnings.warn(mesg, RuntimeWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "(0, 0.00037784202140755951, [u'fundamental_63', u'fundamental_20'])\n",
       "(1, 0.00037783532752655447, [u'technical_33', u'fundamental_42'])\n",
       "(2, 0.00037783311563543975, [u'fundamental_29', u'fundamental_23'])\n",
@@ -259,9 +275,39 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "training selection model\n",
+      "end of trainind, now predicting\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:85: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(100, 9, 0.021278908598623116, -0.12814614764980251)\n",
+      "(200, 12, -0.17000252076174163, -0.12583690651667903)\n"
+     ]
+    }
+   ],
    "source": [
     "#model selection : create a new target selecting models with lowest asolute residual for each line\n",
     "#the objective at this step is to keep only the few best elements which should\n",
@@ -297,7 +343,17 @@
     "\n",
     "#lastvalues=train[train.timestamp==905][['id']+diff_cols].copy()\n",
     "lastvalues=train[train.timestamp==train.timestamp.iloc[-1]][['id']+diff_cols].copy()####\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "print(\"end of trainind, now predicting\")\n",
     "indice=0\n",
     "countplus=0\n",
@@ -326,7 +382,8 @@
     "        lastvalues=test[['id']+diff_cols].copy()\n",
     "    \n",
     "    testid=test.id\n",
-    "    test=test.join(featureexpander.transform(test[cols]))\n",
+    "    test=featureexpander.transform(test[cols])\n",
+    "    #test=test.join(featureexpander.transform(test[cols]))\n",
     "    #prediction using modelselector and models list\n",
     "    #selected_prediction = modelselector.predict_proba(test.loc[: ,treecols])\n",
     "    y_test=np.zeros((test.shape[0], len(tokeep)))\n",
@@ -357,7 +414,9 @@
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {
-    "collapsed": false
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -383,7 +442,9 @@
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -412,7 +473,9 @@
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -441,7 +504,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
