--- a/Models/PA2_corrected2_Ensemble_rfr.ipynb
+++ b/Models/PA2_corrected2_Ensemble_rfr.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -191,7 +193,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -259,7 +263,7 @@
     "        lastvalues=test[['id']+diff_cols].copy()\n",
     "    \n",
     "    testid=test.id\n",
-    "    test=test.join(featureexpander.transform(test[cols]))\n",
+    "    test=featureexpander.transform(test[cols])\n",
     "    #prediction using modelselector and models list\n",
     "    #selected_prediction = modelselector.predict_proba(test.loc[: ,treecols])\n",
     "    y_test=np.zeros((test.shape[0], len(tokeep)))\n",
